2013-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* sdccconf_in.h:
	  Regenerated to make --disable-stm8-port work.

2013-06-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCClospre.hpp,
	  src/SDCClospre.cc:
	  Preparations for better handling of register-pressure in lospre.

2013-06-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCBBlock.c,
	  src/SDCCopt.c,
	  src/SDCClospre.hpp:
	  Preparations for better handling of register-pressure in lospre.

2013-06-28 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.cc:
	  Disable safety in division for stm8.

2013-06-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCnaddr.hpp:
	  Add comment to reference the paper on bank selection.

2013-06-16 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Reorganize rules, disable rules depending on notUsed() or unimplemented ref count.
	* src/stm8/peep.c,
	  src/SDCCpeeph.c:
	  Fix const, handling of relative jumps, read from uninitialized pointer.

2013-06-16 Valentin Dudouyt <valentin dudouyt AT gmail.com>

	* src/stm8/main.c,
	* src/stm8/peep.c: implemented stm8canAssign and stm8notUsed,
	  fixed handling of label entities in stm8instructionSize,
	  added internal buffer in nextToken.
	* src/stm8/peeph.def: uncommented a few peephole rules.

2013-06-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/_mullonglong.c,
	* sdas/as8051/i51adr.c,
	* sdas/linksrc/lkbank.c,
	* sdas/linksrc/lklibr.c,
	* sdas/linksrc/lkrloc.c,
	* sdas/linksrc/aslink.h,
	* src/mcs51/main.c: cosmetic changes
	* sdas/asxxsrc/asmain.c (main): default to 16 bit address width
	* sdas/as8051/i51mch.c (minit): set address width to 24 bit
	* sdas/as8xcxxx/ds8mch.c (machine): validate address width
	* sdas/asxxsrc/asdata.c,
	* sdas/asxxsrc/asxxxx.h: added a_bytes, a_mask, s_mask, v_mask and outradix
	* sdas/asxxsrc/asexpr.c (exprmasks): set a_bytes and masks
	* sdas/asxxsrc/aslist.c: use a_bytes